# genai-agent-advanced-book

./: .env.sample  .gitignore  Makefile  README.md  docker-compose.yml  genai-book.code-workspace
.github/ISSUE_TEMPLATE/: errata_report.md  error_report.md
chapter3/: .env.example  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements.txt  setup.sh  setup_postgres.sh
chapter3/notebooks/: examples.ipynb
chapter4/: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
chapter4/.docker/: Dockerfile
chapter4/data/: XYZ_system_QA.csv  XYZ_system_QA.numbers
chapter4/notebooks/: entire_graph_runner.ipynb  flow_steps_runner.ipynb  tools.ipynb
chapter4/src/: agent.py  configs.py  custom_logger.py  models.py  prompts.py
chapter4/src/scripts/: create_index.py  delete_index.py
chapter4/src/tools/: search_xyz_manual.py  search_xyz_qa.py
chapter5/: .env.sample  .gitignore  README.md  pyproject.toml
chapter5/data/: sample.csv
chapter5/docs/: class.mmd  programmer_sequence.mmd
chapter5/scripts/: 01_e2b_sandbox.py  02_jinja_template.py  03_describe_dataframe.py  04_generate_profile.py  05_generate_code.py  06_execute_code.py  07_generate_review.py  08_programmer.py  09_generate_plan.py  10_execute_plan.py  11_generate_report.py  programmer.py
chapter5/src/graph/: data_analysis.py  programmer.py
chapter5/src/graph/models/: __init__.py  data_analysis_state.py  programmer_state.py
chapter5/src/graph/nodes/: __init__.py  approve_plan.py  execute_code.py  generate_code.py  generate_plan.py  generate_report.py  generate_review.py  set_dataframe.py
chapter5/src/llms/apis/: openai.py
chapter5/src/llms/models/: __init__.py  llm_response.py
chapter5/src/llms/utils/: __init__.py  load_template.py
chapter5/src/models/: __init__.py  data_thread.py  plan.py  program.py  review.py
chapter5/src/modules/: __init__.py  describe_dataframe.py  execute_code.py  generate_code.py  generate_plan.py  generate_report.py  generate_review.py  set_dataframe.py
chapter5/src/prompts/: describe_dataframe.jinja  generate_code.jinja  generate_plan.jinja  generate_report.jinja  generate_review.jinja
chapter6/: .env.sample  .gitignore  README.md  langgraph.json  pyproject.toml
chapter6/arxiv_researcher/: logger.py  settings.py
chapter6/arxiv_researcher/agent/: paper_analyzer_agent.py  paper_search_agent.py  research_agent.py
chapter6/arxiv_researcher/chains/: goal_optimizer_chain.py  hearing_chain.py  paper_processor_chain.py  query_decomposer_chain.py  reading_chains.py  reporter_chain.py  task_evaluator_chain.py  utils.py
chapter6/arxiv_researcher/chains/prompts/: check_sufficiency.prompt  goal_optimizer_conversation.prompt  goal_optimizer_search.prompt  hearing.prompt  query_decomposer.prompt  reporter_system.prompt  reporter_user.prompt  set_section.prompt  summarize.prompt  task_evaluator.prompt
chapter6/arxiv_researcher/models/: __init__.py  arxiv.py  markdown.py  reading.py
chapter6/arxiv_researcher/searcher/: arxiv_searcher.py  searcher.py
chapter6/arxiv_researcher/service/: markdown_parser.py  markdown_storage.py  pdf_to_markdown.py
chapter6/fixtures/: 2408.14317.md  sample_context.txt  sample_goal.txt
chapter7/: .env.sample  README.md  pyproject.toml
chapter7/notebooks/: decision_support_agent_runner.ipynb  macrs_runner.ipynb
chapter7/src/decision_support_agent/: agent.py  configs.py  models.py  prompts.py
chapter7/src/macrs/: agent.py  configs.py  custom_logger.py  models.py  prompts.py
notebooks/: entire_graph_runner.ipynb
src/: agent.py  configs.py
src/scripts/: create_index.py
src/tools/: search_xyz_qa.py
