[tool.poetry]
name = "agent-book"
version = "0.1.0"
description = ""
authors = ["Your Name <user@example.com>"]
readme = "README.md"
packages = [{include = "agent_book"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.53.1"
langgraph = "^0.2.14"
pydantic-settings = "^2.4.0"
langchain = "^0.2.14"
elasticsearch = "^8.15.0"
pypdf = "^4.3.1"
langchain-community = "^0.2.13"
langchain-text-splitters = "^0.2.2"
qdrant-client = "^1.11.1"
promptflow-tracing = "^1.16.1"
promptflow-devkit = "^1.16.1"
pygraphviz = "^1.13"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "F", # Flake8
    "B", # Black
    "I", # isort
    "E", # error
    "W"  # warning
]
ignore = []
fixable = ["ALL"]
exclude = [
    ".ruff_cache"
]
line-length = 119
indent-width = 4
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
force-single-line = false